# Not_store

./: .gitignore  pyproject.toml  requirements.txt  run.py
models/: menu.py  service.py
models/db/: base.py
models/storage/: __init__.py  base_storage.py  file_storage.py  memory_storage.py
